--- a/huellitas/index.html
+++ b/huellitas/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/images/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Huellitas</title>
+    <title>Veterinaria Huellitas</title>
   </head>
   <body>
     <div id="root"></div>
